# graph_dynamics

./: CMakeLists.txt  README.md  package.xml
calib_data/joints/: joint_pos.npy
config/: calib_med.yaml  camera_extrinsics.json  camera_extrinsics_robust.json  med.yaml
dataset/: dataset_to_d3fields.py  joints_to_pos.py
launch/: setup_sensors.launch
src/: calib_record.py  calibrate.py  dataset_collector.py  dataset_record.py  debug_graph.py  debug_pcl.py  debug_perception.py  debug_tag.py  debug_teleop.py  gamepad_teleop.py  joints_record.py  pcd.npy  rgb.npy  teleop_kuka.py  test_proprioception.py  train.py  visualize.py  visualize_graph.py  visualize_train_curve.py
src/dyn3dgs/: external.py  helpers.py  train.py  visualize.py
src/graph/: dataset.py  gnn.py  graph_gen.py  visual_dataset.py
src/gs/: convert.py  external.py  helpers.py  train.py  train_utils.py  trainer.py
src/hardware/: cameras.py  kuka.py  multi_realsense.py  single_realsense.py  teleop_utils.py
src/hardware/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_memory_util.py  shared_ndarray.py
src/perception/: perception3d_module.py
src/test_scripts/: camera_temp.py  debug_graph.py  debug_pcl.py  debug_perception.py  debug_tag.py  debug_teleop.py  gamepad_test.py  gnn_forward_pass.py  visualize_camera.py
src/tracking/: train_gs.py  train_utils.py
src/tracking/utils/: init_pcd.py  merge_mask.py  metadata.py  my_utils.py  obtain_mask.py
urdf/: med_gamma.urdf
