<?xml version="1.0"?>
<package>
  <name>graph_tracking</name>
  <version>0.0.0</version>
  <description>Graph Tracking project</description>

  <maintainer email="dangthanhan507@gmail.com">An Dang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>N/A</license>


  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>geometry_msgs</build_depend> -->

  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>geometry_msgs</run_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>